--- a/src/MainSection/CrearContacto/CrearContacto.css
+++ b/src/MainSection/CrearContacto/CrearContacto.css
@@ -1,17 +1,37 @@
-form{
-    width: 600px;
-    height: 500px;
+.form-container{
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    z-index: 100;
+    background-color: rgba(0, 0, 0, 0.396);
+    left: 0;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form-container h2{
+    margin-bottom: 20px;
+}
+form{
+    width: 400px;
+    height: 600px;
+    background-color: #E0E0E0 ;
+    display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .input-container{
     height: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-button{
     width: 200px;
-    height: 100px;
+    height: 50px;
 }
