--- a/src/MainSection/MainSection.css
+++ b/src/MainSection/MainSection.css
@@ -1,11 +1,38 @@
 .main-container{
     display: flex;
+    background-color: rgb(241, 241, 241);
     
 }
 
 .agenda-container{
-    width: 520px;
-    height: 800px;
+    width: calc(100vw - 250px);
+    height: 100vh;
     overflow-y: auto ;
-    border: solid red;
+}
+
+
+.agenda--input{
+    width: 100%;
+    display: flex;
+}
+.agenda--input input{
+    width: 500px;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    font-size: 20px;
+    margin: 10px auto;
+}
+.agenda--input input:focus{
+    outline: none;
+}
+
+.contactos-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 20px;
+    gap: 20px;
+
 }
