--- a/src/MainSection/CrearContacto/CrearContacto.css
+++ b/src/MainSection/CrearContacto/CrearContacto.css
@@ -1,37 +1,144 @@
-.form-container{
+@import url(../../main.css);
+
+.form-container {
     position: absolute;
     width: 100vw;
     height: 100vh;
     z-index: 100;
-    background-color: rgba(0, 0, 0, 0.396);
     left: 0;
+    top: -10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: all .3s;
 }
-.form-container h2{
-    margin-bottom: 20px;
+
+.form-close {
+    background-color: transparent;
+    border: none;
+    color: var(--txt-color);
+    font-size: 20px;
+    position: relative;
+    right: 0px;
 }
-form{
-    width: 400px;
-    height: 600px;
-    background-color: #E0E0E0 ;
+
+.close-container {
+    position: absolute;
+    top: 10px;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.558);
+    z-index: 105;
+}
+
+.form-container h2 {
+    font-size: 40px;
+    text-align: center;
+    margin: 20px;
+}
+
+form {
+    width: 500px;
+    height: 750px;
+    background-color: #2F3B47;
+    border-radius: 15px;
+    padding: 10px;
+    color: #e6e9eb;
+    position: relative;
+    z-index: 110;
+
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    border-radius: 5px;
-    padding: 10px;
 }
 
-.input-container{
+.input-container {
     height: 100px;
+    width: 400px;
     display: flex;
     flex-direction: column;
+    font-size: 20px;
 }
 
-.form-button{
+.input-container input {
+    height: 35px;
+    width: 100%;
+}
+
+.radios-container h3 {
+    width: 100%;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.radios-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.input-radio {
+    display: flex;
+    flex-direction: column-reverse;
+    font-size: 20px;
+}
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+
+.input-radio input[type=radio] {
+    width: 100%;
+    height: 2em;
+}
+
+.form-button {
     width: 200px;
     height: 50px;
+    margin: auto;
+    background-color: var(--green);
+    color: var(--txt-color);
+
+    border: none;
+    border-radius: 15px;
+    font-size: 20px;
+    font-weight: 600;
+    transition: all .3s;
+}
+
+.form-button:hover {
+    background-color: var(--green-hover);
+}
+
+
+@media (max-width: 390px) {
+    form {
+        width: 350px;
+        height: 650px;
+    }
+
+    .input-container {
+        height: 70px;
+        width: 300px;
+        margin: 10px auto;
+    }
+
+    .radios-container {
+        width: 90%;
+        margin: auto;
+    }
+
+    .input-radio {
+        font-size: 15px;
+    }
+
+    .input-radio input[type=radio] {
+        height: 1.5em;
+    }
+
 }
