--- a/src/MainSection/ContactoPlano/ContactoPlano.css
+++ b/src/MainSection/ContactoPlano/ContactoPlano.css
@@ -1,55 +1,58 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
-}
-
-.contacto-container{
+.contacto-container {
     width: 100%;
     height: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 1px solid #e8e8e8;
-    border-radius: 15px;
+    border-radius: 5px;
     background-color: #fff;
     overflow: hidden;
+    transition: all .3s;
 }
 
 
-.contacto--txt{
+.contacto--txt {
     width: 100%;
     height: 50%;
-    /* ↓↓ CAMBIAR CON RESPECTO AL GRUPO QUE PERTENEZCA ↓↓ */
-
     position: relative;
     color: rgb(246, 246, 246);
     font-size: 20px;
 }
-.trabajo{
-    background: linear-gradient(#00000026, #000000c9), url(https://img.freepik.com/fotos-premium/espacio-trabajo-oscuro-moderno-computadora-portatil-maqueta-pantalla-blanca-telefono-inteligente-sobre-fondo-oscuro_67155-18521.jpg);;
+
+.trabajo {
+    background: linear-gradient(#00000026, #000000c9), url(https://img.freepik.com/fotos-premium/espacio-trabajo-oscuro-moderno-computadora-portatil-maqueta-pantalla-blanca-telefono-inteligente-sobre-fondo-oscuro_67155-18521.jpg);
+    ;
     background-size: cover;
     background-position: 0px 50%;
 }
 
-.amigos{
+.amigos {
     background: linear-gradient(#00000026, #000000c9), url(https://c4.wallpaperflare.com/wallpaper/280/645/272/joystick-controller-gamepad-wallpaper-preview.jpg);
     background-size: cover;
     background-position: 0px 60%;
 }
-.estudio{
+
+.estudio {
     background: linear-gradient(#00000026, #000000c9), url(https://www.10wallpaper.com/wallpaper/1366x768/1406/books_life-widescreen_Wallpaper_1366x768.jpg);
     background-size: cover;
     background-position: 0px 60%;
 }
-.desconocido{
+
+.desconocido {
     background: linear-gradient(#00000026, #000000c9), url(https://media.istockphoto.com/id/1408364942/es/foto/signo-de-interrogaci%C3%B3n-blanco-en-fondo-azul-de-puntuaci%C3%B3n-con-concepto-de-s%C3%ADmbolo-abstracto-o.webp?b=1&s=170667a&w=0&k=20&c=LQt-d0SNk3tO2ezo1fgPB1oCniwf60m3GWjJXIhYWak=);
     background-size: cover;
     background-position: 0px 60%;
 }
-.contacto--dlt{
+
+.trabajo:hover,
+.amigos:hover,
+.estudio:hover,
+.desconocido:hover {
+    filter: brightness(110%)
+}
+
+.contacto--dlt {
     width: 30px;
     height: 30px;
     color: #fff;
@@ -57,26 +60,28 @@
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    
-    
+
+
     position: absolute;
     right: 20px;
     top: 20px;
-    
+
     display: flex;
     justify-content: center;
     align-items: top;
 }
+
 .contacto--dlt i {
     font-size: 30px;
     font-weight: 600;
     pointer-events: none;
 }
-.contacto--dlt i:hover{
-    filter: drop-shadow(0 0 9px #fff);
-} 
 
-.contacto--txt h2{
+.contacto--dlt i:hover {
+    filter: drop-shadow(0 0 9px #fff);
+}
+
+.contacto--txt h2 {
     position: absolute;
     bottom: 10px;
     left: 10px;
@@ -84,7 +89,7 @@
 }
 
 
-.contacto--datos{
+.contacto--datos {
     width: 100%;
     height: 50%;
     padding: 10px;
@@ -94,6 +99,6 @@
     font-size: 18px;
 }
 
-.contacto--datos h4 > i{
-    padding: 0 10px ;
+.contacto--datos h4>i {
+    padding: 0 10px;
 }
