--- a/src/MainSection/MainSection.css
+++ b/src/MainSection/MainSection.css
@@ -1,22 +1,23 @@
-.main-container{
+.main-container {
     display: flex;
     background-color: rgb(241, 241, 241);
     padding-top: 10px;
     width: 100%;
-    
+
 }
 
-.agenda-container{
-    width: calc(100vw - 195px);
+.agenda-container {
+    width: calc(100vw - 190px);
     height: 100vh;
-    overflow-y: auto ;
+    overflow-y: auto;
 }
 
-.agenda--input{
+.agenda--input {
     width: 100%;
     display: flex;
 }
-.agenda--input input{
+
+.agenda--input input {
     width: 500px;
     height: 30px;
     border-radius: 5px;
@@ -25,32 +26,52 @@
     font-size: 20px;
     margin: 10px auto;
 }
-.agenda--input input:focus{
+
+.agenda--input input:focus {
     outline: none;
 }
 
-.agenda--input button{
+.agenda--input button {
     width: 100px;
     height: 50px;
+    background-color: var(--green);
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    margin-right: 10px;
+    transition: all .3s;
+    
+    color: var(--txt-color);
+    font-size: 18px;
+    font-weight: 600;
+    text-shadow: 1px 1px 2px rgb(118, 118, 118);
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--green);
-    color: var(--txt-color);
-    border: none;
-    cursor: pointer;
-    border-radius: 10px;
-    margin-right: 10px;
+}
+
+.agenda--input button:hover {
+    background-color: var(--green-hover);
+    scale: 1.05;
+}
+
+#clearStorage {
+    background-color: rgb(240, 102, 102);
     font-size: 15px;
 }
-.agenda--input button:hover{
-    background-color: var(--green-hover);
+
+#clearStorage:hover {
+    background-color: rgb(244, 84, 84);
+}
+
+#contactoRandom {
+    background: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
+
 }
 
 
-
-
-.contactos-container{
+.contactos-container {
     width: 100%;
     height: auto;
     display: grid;
@@ -61,27 +82,29 @@
 }
 
 
-@media (min-width: 378px) and (max-width: 1023px){
-    .agenda--input input{
+@media (min-width: 378px) and (max-width: 1023px) {
+    .agenda--input input {
         width: 400px;
     }
-    .contactos-container{
-        grid-template-columns:1fr 1fr;
+
+    .contactos-container {
+        grid-template-columns: 1fr 1fr;
     }
 }
 
 @media (max-width: 390px) {
-
-    .agenda-container{
+    .agenda-container {
         width: 100vw;
     }
-    .agenda--input{
+
+    .agenda--input {
         padding-left: 60px;
         width: 100%;
         height: 100px;
         display: flex;
     }
-    .agenda--input input{
+
+    .agenda--input input {
         width: 200px;
         height: 50px;
         border-radius: 5px;
@@ -90,7 +113,13 @@
         font-size: 20px;
         margin: 0 10px;
     }
-    .contactos-container{
-        grid-template-columns:1fr;
+
+    #clearStorage,
+    #contactoRandom {
+        display: none;
+    }
+
+    .contactos-container {
+        grid-template-columns: 1fr;
     }
 }
