--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,13 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&family=Mukta:wght@200;300;400;500&family=Outfit:wght@100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Mukta", sans-serif;
 }
 
-:root{
+:root {
     --txt-color: #e6e9eb;
     --bg-color1: #2F3B47;
     --green: #26b06f;
